[tool.poetry]
name = "ai-stock-screener"
version = "0.1.1"
description = "AI-powered CLI tool that screens stocks using technical and fundamental indicators."
authors = ["Ilia Buleh <ilia.buleh@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ai_stock_screener", format = ["sdist", "wheel"] },
    { include = "covered_call_analyzer", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.2"
yfinance = "^0.2.37"
scikit-learn = "^1.4.2"
lxml = "^5.2.1"
setuptools = "^69.2.0"
numpy = "^1.26"
typer = "^0.16.0"
pandas-ta = "^0.3.14b0"
xgboost = "^3.0.2"
joblib = "^1.5.1"
fear-and-greed = "^0.4"
matplotlib = "^3.10.3"
rich = "^14.0.0"
tabulate = "^0.9.0"
textblob = "^0.19.0"

[tool.poetry.scripts]
screener = "ai_stock_screener.cli:main"
covered-call-div = "covered_call_analyzer.covered_call_analyzer:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"